# coord-smith

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  pyproject.toml
.claude/: python-engineering.md
.claude/skills/ez-ax-autoloop/: SKILL.md
.claude/skills/ez-ax-executable-autoloop/: SKILL.md
.claude/skills/python-engineering/: SKILL.md
.codex/skills/ez-ax-executable-autoloop/: SKILL.md
.codex/skills/ez-ax-loop-rag-compaction-wrapper/: SKILL.md
.codex/skills/ez-ax-loop-released-scope-guard-wrapper/: SKILL.md
.codex/skills/ez-ax-loop-task-slicer-wrapper/: SKILL.md
.codex/skills/ez-ax-loop-validation-picker-wrapper/: SKILL.md
.codex/skills/ez-ax-low-attention-autoloop/: SKILL.md
.codex/skills/python-engineering/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
adr/: ADR-001-llm-free-runtime-and-browser-ban.md  ADR-002-multi-step-recipe-dsl.md  ADR-003-coordinate-priority.md  ADR-004-failure-evidence-policy.md  ADR-005-per-host-advisory-lock.md  ADR-006-run-json-envelope.md  README.md
artifacts/autoloop/: cycle-01-last-message.md  cycle-02-last-message.md  cycle-03-last-message.md  cycle-04-last-message.md  cycle-05-last-message.md  cycle-06-last-message.md  cycle-07-last-message.md  cycle-08-last-message.md  cycle-09-last-message.md  cycle-10-last-message.md  cycle-11-last-message.md  cycle-12-last-message.md  cycle-13-last-message.md  cycle-14-last-message.md  cycle-15-last-message.md  cycle-16-last-message.md  cycle-17-last-message.md  cycle-18-last-message.md  cycle-19-last-message.md  cycle-20-last-message.md  cycle-21-last-message.md  cycle-22-last-message.md  cycle-23-last-message.md  cycle-24-last-message.md  cycle-25-last-message.md
docs/: architecture-boundaries.md  backlog.md  core-loop.md  current-state.md  execution-model.md  functional-spec.md  pr-006-harden-adapter-guards.md  pr-ceiling-safety.md  pr-polish-docs-project-goal-definition.md  prd-cua-visual-verification.md  prd-direction-realignment-impl.md  prd-direction-realignment.md  prd-production-hardening.md  prd-pyautogui-adapter-hardening.md  prd-remove-mcp-scaffold.md  prd.md  recipe-guide.md
docs/codex-global-skills/ez-ax-autonomous-loop/: SKILL.md
docs/codex-global-skills/ez-ax-rag-compactor/: SKILL.md
docs/codex-global-skills/ez-ax-released-scope-guard/: SKILL.md
docs/codex-global-skills/ez-ax-task-slicer/: SKILL.md
docs/codex-global-skills/ez-ax-validation-picker/: SKILL.md
docs/decisions/: 2026-05-flow-architecture-brief.html
docs/history/: README.md  pr-polish-docs-project-goal-definition.md  prd-multi-step-flow-recipe.md  prd-production-hardening.md
docs/llm/: low-attention-coverage-ledger.json  low-attention-execution-contract.json  low-attention-slice-templates.json  repo-autonomous-loop-adapter.yaml
docs/llm/agents/: assetization-pattern-promoter.md  contract-scope-guardian.md
docs/product/: prd-e2e-orchestration.md  prd-langchain-tooling-policy.md  prd-langgraph-state-model.md  prd-low-attention-implementation-queue.md  prd-openclaw-computer-use-runtime.md  prd-openclaw-e2e-validation.md  prd-openclaw-evidence-model.md  prd-python-langgraph-runtime.md  prd-python-mcp-client-acquisition.md  prd-python-rag-operations.md  prd-python-runtime-layout.md  prd-python-runtime-reset.md  prd-python-runtime-roadmap.md  prd-python-validation-contract.md  prd-runtime-missions.md  rag-archive.json  rag.json  work-rag.json
docs/recipes/: coord-click.yaml  datepicker-pattern.yaml  image-click-with-signal.yaml  image-click.yaml  multi-step-flow.yaml  multi-step-with-fallback.yaml  multi-step-with-wait-for.yaml  sample-click-recipe.json  sample-image-click-recipe.json
docs/recipes/templates/: README.md  generate_placeholders.py
docs/reports/: 2026-05-29-strategic-direction-check.md
scripts/: install-codex-global-skills.sh  print-autoloop-command.py  run-low-attention-loop.sh  run-modeled-mcp-cli.py
src/coord_smith/: __init__.py  _version.py  cli_logging.py
src/coord_smith/adapters/: action_log_writer.py  coord_resolver.py  page_transition.py  pyautogui_adapter.py  step_guards.py
src/ez_ax/: __init__.py
tests/contract/: test_claude_md_recipe_example.py  test_evidence_specs.py  test_failure_jsonl_schema.py  test_runtime_graph_plan.py
tests/e2e/: README.md  test_agent_acceptance.py  test_cli_exit_codes.py  test_cli_json_and_inline_recipe.py  test_multi_step_happy.py  test_multi_step_partial_failure.py  test_released_path_e2e.py
tests/fixtures/: README.md  fake_mcp_sdk.py
tests/integration/: test_demo_flow_with_real_opencv.py  test_failure_capture.py  test_failure_phase_tagging.py  test_pyautogui_real.py  test_step_fallback_chain.py  test_step_wait_for.py
tests/unit/: test_action_log_writer.py  test_adversarial_hardening.py  test_api.py  test_autoloop_harness_separation.py  test_autoloop_prompt_driver.py  test_autoloop_runner.py  test_bootstrap_assets.py  test_browser_facing_execution_ownership.py  test_canonical_stack_specification.py  test_cli_logging.py  test_click_recipe.py  test_console_scripts.py  test_coord_smith_is_orchestration_centric.py  test_coord_smith_must_not_become_browser_facing.py  test_coord_smith_owns_validation_stopping_reasoning.py  test_coverage_ledger.py  test_docs_ceiling_truth.py  test_error_hierarchy.py  test_evidence_envelope.py  test_execution_adapter_contract.py  test_execution_architecture_abstraction.py  test_execution_contract.py  test_execution_non_replaceable.py  test_execution_wrapper.py  test_ez_ax_is_orchestration_centric.py  test_ez_ax_must_not_become_browser_facing.py  test_ez_ax_owns_validation_stopping_reasoning.py  test_hardening_cycle1.py  test_hardening_cycle10.py  test_hardening_cycle11.py  test_hardening_cycle2.py  test_hardening_cycle3.py  test_hardening_cycle4.py  test_hardening_cycle5.py  test_hardening_cycle6.py  test_hardening_cycle7.py  test_hardening_cycle9.py  test_host_lock.py  test_identifiers.py  test_langgraph_released_assembly.py  (+84 more)
(+103 files in other folders)
