[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "coord-smith"
version = "0.1.0"
description = "Python-first runtime scaffold for coord-smith."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "langchain>=0.3.0",
  "langgraph>=0.3.0",
  "opencv-python>=4.10.0",
  "pyautogui>=0.9.54",
  "pydantic>=2.8.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "playwright>=1.50.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.0",
  "types-PyAutoGUI",
  "types-PyYAML",
]

[project.scripts]
coord-smith = "coord_smith.graph.pyautogui_cli_entrypoint:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coord_smith"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "real: requires OS-level permissions (Accessibility + Screen Recording) and a real display; skipped by default",
]
addopts = "-m 'not real'"
filterwarnings = [
  "ignore::UserWarning:langchain_core.*",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test files use intentionally long, descriptive function names for clarity.
# E501 (line-too-long) is unavoidable for names like
# "test_forward_transition_rejects_benchmark_validation_under_prepare_session_ceiling".
# This is a pragmatic trade-off: test clarity > strict line length.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
packages = ["coord_smith"]
strict = true
